[FLASK] Fix snaps authorship pill (#15190)
* add truncation

* add title to show complete package name

* Remove hardcoded max-width

* truncation

* reduced max-width

* final changes

--- a/ui/components/app/flask/snaps-authorship-pill/index.scss
+++ b/ui/components/app/flask/snaps-authorship-pill/index.scss
@@ -5,6 +5,14 @@
 
   .chip {
     padding-right: 8px;
+    margin-top: 4px;
+  }
+
+  .chip__label {
+    max-width: 168px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   &:hover,
